compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/corpus__pass_corpus@041_unary_bnot.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:14
      LParen `(` @1:5..1:6
      Param @1:6..1:12
        Ident `x` @1:6..1:7
        Colon `:` @1:7..1:8
        PathType @1:9..1:12
          Ident `i32` @1:9..1:12
      RParen `)` @1:12..1:13
    RetType @1:14..1:20
      Arrow `->` @1:14..1:16
      PathType @1:17..1:20
        Ident `u0` @1:17..1:19
    Block @1:20..2:1
      LBrace `{` @1:20..1:21
      LetStmt @1:22..1:34
        KwLet `let` @1:22..1:25
        WildcardPat @1:26..1:28
          Ident `_` @1:26..1:27
        Eq `=` @1:28..1:29
        UnaryExpr @1:30..1:32
          Tilde `~` @1:30..1:31
          PathExpr @1:31..1:32
            Ident `x` @1:31..1:32
        Semi `;` @1:32..1:33
      RBrace `}` @1:34..1:35
