compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/corpus__pass_corpus@056_slice_type.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:16
      LParen `(` @1:5..1:6
      Param @1:6..1:14
        Ident `s` @1:6..1:7
        Colon `:` @1:7..1:8
        SliceType @1:9..1:14
          LBracket `[` @1:9..1:10
          RBracket `]` @1:10..1:11
          PathType @1:11..1:14
            Ident `i32` @1:11..1:14
      RParen `)` @1:14..1:15
    RetType @1:16..1:22
      Arrow `->` @1:16..1:18
      PathType @1:19..1:22
        Ident `u0` @1:19..1:21
    Block @1:22..2:1
      LBrace `{` @1:22..1:23
      RBrace `}` @1:23..1:24
